--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="#">Tours</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/contact/">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -35,7 +35,7 @@
       <div class="hero-content-area">
         <h1>Mountain Travel</h1>
         <h3>Unmissable Adventure Tours Around The World</h3>
-        <a href="#" class="btn">Contact Us Now</a>
+        <a href="/contact/" class="btn">Contact Us Now</a>
       </div>
     </section>
 
@@ -199,7 +199,9 @@
             <div class="contact-line-icon">
               <i class="fa fa-envelope fa-2x"></i>
             </div>
-            <div class="contact-line-details"><p>contact@mountain.com</p></div>
+            <div class="contact-line-details">
+              <p>hello@nicolasvallee.dev</p>
+            </div>
           </div>
           <div class="contact-line">
             <div class="contact-line-icon">
@@ -219,7 +221,7 @@
             <li><a href="#">Recommended Gear List</a></li>
             <li><a href="#">Frequently Asked Questions</a></li>
             <li><a href="#">Employment</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/contact/">Contact</a></li>
             <li><a href="#">Legal Notice</a></li>
             <li><a href="#">Privacy Policy</a></li>
           </ul>
@@ -228,12 +230,12 @@
       <div class="footer-dev">
         <ul class="social-icons">
           <li>
-            <a href="https://www.linkedin.com/in/nvallee/"
+            <a href="https://www.linkedin.com/in/nvallee/" target="_blank"
               ><i class="fa fa-linkedin-square fa-2x"></i
             ></a>
           </li>
           <li>
-            <a href="https://github.com/nva12/awdb-mountain"
+            <a href="https://github.com/nva12/mountain-travel" target="_blank"
               ><i class="fa fa-github-square fa-2x"></i
             ></a>
           </li>
