--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="/assets/css/contact.css" />
+    <link rel="stylesheet" href="../assets/css/contact.css" />
   </head>
   <body>
     <div class="form-container">
@@ -28,7 +28,7 @@
         <textarea name="message" id="message" cols="30" rows="6"></textarea>
         <p><span class="star">*</span> <em>required field</em></p>
         <div class="buttons">
-          <a href="/" class="nav-link"
+          <a href="../" class="nav-link"
             ><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a
           ><button type="submit">Send</button>
         </div>
