--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
     <header>
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="#">Tours</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="/contact/">Contact</a></li>
+          <li><a href="./contact/">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -30,12 +30,12 @@
     <section class="hero">
       <div
         class="background-image"
-        style="background-image: url(assets/img/main.jpg)"
+        style="background-image: url(./assets/img/main.jpg)"
       ></div>
       <div class="hero-content-area">
         <h1>Mountain Travel</h1>
         <h3>Unmissable Adventure Tours Around The World</h3>
-        <a href="/contact/" class="btn">Contact Us Now</a>
+        <a href="./contact/" class="btn">Contact Us Now</a>
       </div>
     </section>
 
@@ -50,19 +50,19 @@
       <ul class="grid">
         <li
           class="small fadeinleft"
-          style="background-image: url(assets/img/mountain1.jpg);"
+          style="background-image: url(./assets/img/mountain1.jpg);"
         ></li>
         <li
           class="large fadein"
-          style="background-image: url(assets/img/mountain2.jpg);"
+          style="background-image: url(./assets/img/mountain2.jpg);"
         ></li>
         <li
           class="large fadein"
-          style="background-image: url(assets/img/mountain3.jpg);"
+          style="background-image: url(./assets/img/mountain3.jpg);"
         ></li>
         <li
           class="small fadeinright"
-          style="background-image: url(assets/img/mountain4.jpg);"
+          style="background-image: url(./assets/img/mountain4.jpg);"
         ></li>
       </ul>
     </section>
@@ -118,7 +118,7 @@
       <hr />
       <div class="testimonial-card fadein">
         <div class="testimonial-image">
-          <img src="/assets/img/colt.jpg" alt="Colt Steele" />
+          <img src="./assets/img/colt.jpg" alt="Colt Steele" />
         </div>
         <div class="testimonial-quote">
           <p class="quote">
@@ -131,7 +131,7 @@
       </div>
       <div class="testimonial-card fadein">
         <div class="testimonial-image">
-          <img src="/assets/img/elie.jpg" alt="Colt Steele" />
+          <img src="./assets/img/elie.jpg" alt="Elie Schoppik" />
         </div>
         <div class="testimonial-quote">
           <p class="quote">
@@ -144,7 +144,7 @@
       </div>
       <div class="testimonial-card">
         <div class="testimonial-image fadein">
-          <img src="/assets/img/tim.jpg" alt="Colt Steele" />
+          <img src="./assets/img/tim.jpg" alt="Tim Garcia" />
         </div>
         <div class="testimonial-quote">
           <p class="quote">
@@ -221,7 +221,7 @@
             <li><a href="#">Recommended Gear List</a></li>
             <li><a href="#">Frequently Asked Questions</a></li>
             <li><a href="#">Employment</a></li>
-            <li><a href="/contact/">Contact</a></li>
+            <li><a href="./contact/">Contact</a></li>
             <li><a href="#">Legal Notice</a></li>
             <li><a href="#">Privacy Policy</a></li>
           </ul>
@@ -272,6 +272,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
