--- a/app/contact.html
+++ b/app/contact.html
@@ -13,13 +13,12 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="../assets/css/contact.css" />
   </head>
-  <body>
+  <body class="contact-body">
     <div class="form-container">
-      <h1>Contact Us</h1>
-      <hr />
-      <form action="#">
+      <h1 class="contact-h1">Contact Us</h1>
+      <hr class="contact-hr" />
+      <form action="#" class="contact-form">
         <label for="name">Name <span class="star">*</span></label>
         <input type="text" id="name" required />
         <label for="email">Email <span class="star">*</span></label>
