--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,6 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
     <header>
@@ -22,7 +21,7 @@
         <ul>
           <li><a href="#">Tours</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="./contact/">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -35,7 +34,7 @@
       <div class="hero-content-area">
         <h1>Mountain Travel</h1>
         <h3>Unmissable Adventure Tours Around The World</h3>
-        <a href="./contact/" class="btn">Contact Us Now</a>
+        <a href="./contact.html" class="btn">Contact Us Now</a>
       </div>
     </section>
 
@@ -221,7 +220,7 @@
             <li><a href="#">Recommended Gear List</a></li>
             <li><a href="#">Frequently Asked Questions</a></li>
             <li><a href="#">Employment</a></li>
-            <li><a href="./contact/">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
             <li><a href="#">Legal Notice</a></li>
             <li><a href="#">Privacy Policy</a></li>
           </ul>
@@ -270,8 +269,5 @@
         </div>
       </div>
     </footer>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="./assets/js/script.js"></script>
   </body>
 </html>
