refactor header and hero

--- a/app/index.html
+++ b/app/index.html
@@ -15,9 +15,9 @@
     />
   </head>
   <body>
-    <header>
-      <h2><a href="#">Mountain Travel</a></h2>
-      <nav>
+    <header class="site-header">
+      <h2 class="site-header__brand"><a href="#">Mountain Travel</a></h2>
+      <nav class="site-header__nav">
         <ul>
           <li><a href="#">Tours</a></li>
           <li><a href="#">About</a></li>
@@ -28,13 +28,15 @@
 
     <section class="hero">
       <div
-        class="background-image"
+        class="hero__background-image"
         style="background-image: url(./assets/img/main.jpg)"
       ></div>
-      <div class="hero-content-area">
-        <h1>Mountain Travel</h1>
-        <h3>Unmissable Adventure Tours Around The World</h3>
-        <a href="./contact.html" class="btn">Contact Us Now</a>
+      <div class="hero__content-area">
+        <h1 class="hero__title">Mountain Travel</h1>
+        <h3 class="hero__subtitle">
+          Unmissable Adventure Tours Around The World
+        </h3>
+        <a href="./contact.html" class="btn btn--hero">Contact Us Now</a>
       </div>
     </section>
 
