refactor destinations and grid

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
       </nav>
     </header>
 
-    <section class="hero">
+    <section class="section hero">
       <div
         class="hero__background-image"
         style="background-image: url(./assets/img/main.jpg)"
@@ -40,8 +40,8 @@
       </div>
     </section>
 
-    <section class="destinations">
-      <h3 class="title">Some of our destinations:</h3>
+    <section class="section destinations">
+      <h3 class="section__title">Some of our destinations:</h3>
       <p>
         Tired of the ocean? Are the plains too plain? Come along with us on one
         of our mountain adventures. Here are some pictures from the people who
@@ -50,26 +50,26 @@
       <hr />
       <ul class="grid">
         <li
-          class="small fadeinleft"
+          class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--small-at-large fadeinleft"
           style="background-image: url(./assets/img/mountain1.jpg);"
         ></li>
         <li
-          class="large fadein"
+          class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--large-at-large fadein"
           style="background-image: url(./assets/img/mountain2.jpg);"
         ></li>
         <li
-          class="large fadein"
+          class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--large-at-large fadein"
           style="background-image: url(./assets/img/mountain3.jpg);"
         ></li>
         <li
-          class="small fadeinright"
+          class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--small-at-large fadeinright"
           style="background-image: url(./assets/img/mountain4.jpg);"
         ></li>
       </ul>
     </section>
 
-    <section class="packages">
-      <h3 class="title">Tour Packages</h3>
+    <section class="section packages">
+      <h3 class="section__title">Tour Packages</h3>
       <p>
         We offer a variety of mountaineering packages. Whether you've climbed
         Everest or don't even know what a mountain is, we've got the perfect
@@ -114,8 +114,8 @@
       </ul>
     </section>
 
-    <section class="testimonials">
-      <h3 class="title">Testimonials from our adventurers:</h3>
+    <section class="section testimonials">
+      <h3 class="section__title">Testimonials from our adventurers:</h3>
       <hr />
       <div class="testimonial-card fadein">
         <div class="testimonial-image">
@@ -157,8 +157,8 @@
       </div>
     </section>
 
-    <section class="contact">
-      <h3 class="title">Learn More</h3>
+    <section class="section contact">
+      <h3 class="section__title">Learn More</h3>
       <p>
         Want to know about our upcoming mountain-related events, or come to one
         of our mixers? Just sign up for our mailing list. No spam from us, we
