--- a/app/index.html
+++ b/app/index.html
@@ -78,34 +78,42 @@
       <hr />
 
       <ul class="grid">
-        <li class="fadeinleft">
-          <i class="fa fa-compass fa-4x"></i>
-          <h4>Guided Trips</h4>
+        <li
+          class="grid__item grid__item--packages grid__item--medium-at-medium fadeinleft"
+        >
+          <i class="feature__icon fa fa-compass fa-4x"></i>
+          <h4 class="feature__title">Guided Trips</h4 class="feature__title">
           <p>
             Looking for the complete experience? Take a tour with one of our
             experts. They'll show you secrets that you're likely to miss
             otherwise.
           </p>
         </li>
-        <li class="fadein">
-          <i class="fa fa-camera-retro fa-4x"></i>
-          <h4>Photo Trips</h4>
+        <li
+          class="grid__item grid__item--packages grid__item--medium-at-medium fadein"
+        >
+          <i class="feature__icon fa fa-camera-retro fa-4x"></i>
+          <h4 class="feature__title">Photo Trips</h4>
           <p>
             Want to experience nature's beauty without all of that annoying
             exercise? Take a photo tour on one of our mountain buses.
           </p>
         </li>
-        <li class="fadein">
-          <i class="fa fa-bicycle fa-4x"></i>
-          <h4>Biking Trips</h4>
+        <li
+          class="grid__item grid__item--packages grid__item--medium-at-medium fadein"
+        >
+          <i class="feature__icon fa fa-bicycle fa-4x"></i>
+          <h4 class="feature__title">Biking Trips</h4>
           <p>
             If bicycles are more your speed, consider taking a tour through one
             of our mountain bike paths. We'll provide the bikes, and lunch too!
           </p>
         </li>
-        <li class="fadeinright">
-          <i class="fa fa-flag-checkered fa-4x"></i>
-          <h4>Racing Trips</h4>
+        <li
+          class="grid__item grid__item--packages grid__item--medium-at-medium fadeinright"
+        >
+          <i class="feature__icon fa fa-flag-checkered fa-4x"></i>
+          <h4 class="feature__title">Racing Trips</h4>
           <p>
             Got a competitve spirit? Sign up for one of our mountain marathons!
             Try to reach the summit before anyone else.
@@ -117,42 +125,42 @@
     <section class="section testimonials">
       <h3 class="section__title">Testimonials from our adventurers:</h3>
       <hr />
-      <div class="testimonial-card fadein">
-        <div class="testimonial-image">
+      <div class="testimonial__card fadein">
+        <div class="testimonial__image">
           <img src="./assets/img/colt.jpg" alt="Colt Steele" />
         </div>
-        <div class="testimonial-quote">
-          <p class="quote">
+        <div>
+          <p class="testimonial__quote">
             Wow! This tour made me realize how much I love mountains. After
             going on one of these tours, I can safely say that they are my
             favorite geographic feature and my favorite word that starts with M.
           </p>
-          <p class="author">- Colt Steele</p>
+          <p class="testimonial__author">- Colt Steele</p>
         </div>
       </div>
-      <div class="testimonial-card fadein">
-        <div class="testimonial-image">
+      <div class="testimonial__card fadein">
+        <div class="testimonial__image">
           <img src="./assets/img/elie.jpg" alt="Elie Schoppik" />
         </div>
-        <div class="testimonial-quote">
-          <p class="quote">
+        <div>
+          <p class="testimonial__quote">
             I never understood why people cared so much about mountains. But
             then I went on one of these tours. Now I can't understand people who
             <em>don't</em> care about mountains!
           </p>
-          <p class="author">- Elie Schoppik</p>
+          <p class="testimonial__author">- Elie Schoppik</p>
         </div>
       </div>
-      <div class="testimonial-card">
-        <div class="testimonial-image fadein">
+      <div class="testimonial__card">
+        <div class="testimonial__image fadein">
           <img src="./assets/img/tim.jpg" alt="Tim Garcia" />
         </div>
-        <div class="testimonial-quote">
-          <p class="quote">
+        <div>
+          <p class="testimonial__quote">
             If you want to understand the universe, head to the mountains. I
             mean, seriously. It's like, woah. You know? It's like that.
           </p>
-          <p class="author">- Tim Garcia</p>
+          <p class="testimonial__author">- Tim Garcia</p>
         </div>
       </div>
     </section>
