--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
         of our mountain adventures. Here are some pictures from the people who
         have had elevated experiences with us.
       </p>
-      <hr />
+      <hr class="separator" />
       <ul class="grid">
         <li
           class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--small-at-large fadeinleft"
@@ -75,7 +75,7 @@
         Everest or don't even know what a mountain is, we've got the perfect
         vacation for you.
       </p>
-      <hr />
+      <hr class="separator" />
 
       <ul class="grid">
         <li
@@ -124,7 +124,7 @@
 
     <section class="section testimonials">
       <h3 class="section__title">Testimonials from our adventurers:</h3>
-      <hr />
+      <hr class="separator" />
       <div class="testimonial__card fadein">
         <div class="testimonial__image">
           <img src="./assets/img/colt.jpg" alt="Colt Steele" />
@@ -173,8 +173,8 @@
         promise! Except for the spam we give you to keep up your energy while
         you're hiking through the mountains. We have tons of that.
       </p>
-      <hr />
-      <form action="">
+      <hr class="separator" />
+      <form action="" class="subscription-form">
         <input type="email" placeholder="Email" />
         <a href="#" class="btn">Subscribe now</a>
       </form>
