complete css refactor

--- a/app/index.html
+++ b/app/index.html
@@ -50,19 +50,19 @@
       <hr class="separator" />
       <ul class="grid">
         <li
-          class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--small-at-large fadeinleft"
+          class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--small-at-large fade-in--left"
           style="background-image: url(./assets/img/mountain1.jpg);"
         ></li>
         <li
-          class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--large-at-large fadein"
+          class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--large-at-large fade-in"
           style="background-image: url(./assets/img/mountain2.jpg);"
         ></li>
         <li
-          class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--large-at-large fadein"
+          class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--large-at-large fade-in"
           style="background-image: url(./assets/img/mountain3.jpg);"
         ></li>
         <li
-          class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--small-at-large fadeinright"
+          class="grid__item grid__item--destinations grid__item--medium-at-medium grid__item--small-at-large fade-in--right"
           style="background-image: url(./assets/img/mountain4.jpg);"
         ></li>
       </ul>
@@ -79,7 +79,7 @@
 
       <ul class="grid">
         <li
-          class="grid__item grid__item--packages grid__item--medium-at-medium fadeinleft"
+          class="grid__item grid__item--packages grid__item--medium-at-medium fade-in--left"
         >
           <i class="feature__icon fa fa-compass fa-4x"></i>
           <h4 class="feature__title">Guided Trips</h4 class="feature__title">
@@ -90,7 +90,7 @@
           </p>
         </li>
         <li
-          class="grid__item grid__item--packages grid__item--medium-at-medium fadein"
+          class="grid__item grid__item--packages grid__item--medium-at-medium fade-in"
         >
           <i class="feature__icon fa fa-camera-retro fa-4x"></i>
           <h4 class="feature__title">Photo Trips</h4>
@@ -100,7 +100,7 @@
           </p>
         </li>
         <li
-          class="grid__item grid__item--packages grid__item--medium-at-medium fadein"
+          class="grid__item grid__item--packages grid__item--medium-at-medium fade-in"
         >
           <i class="feature__icon fa fa-bicycle fa-4x"></i>
           <h4 class="feature__title">Biking Trips</h4>
@@ -110,7 +110,7 @@
           </p>
         </li>
         <li
-          class="grid__item grid__item--packages grid__item--medium-at-medium fadeinright"
+          class="grid__item grid__item--packages grid__item--medium-at-medium fade-in--right"
         >
           <i class="feature__icon fa fa-flag-checkered fa-4x"></i>
           <h4 class="feature__title">Racing Trips</h4>
@@ -125,7 +125,7 @@
     <section class="section testimonials">
       <h3 class="section__title">Testimonials from our adventurers:</h3>
       <hr class="separator" />
-      <div class="testimonial__card fadein">
+      <div class="testimonial__card fade-in">
         <div class="testimonial__image">
           <img src="./assets/img/colt.jpg" alt="Colt Steele" />
         </div>
@@ -138,7 +138,7 @@
           <p class="testimonial__author">- Colt Steele</p>
         </div>
       </div>
-      <div class="testimonial__card fadein">
+      <div class="testimonial__card fade-in">
         <div class="testimonial__image">
           <img src="./assets/img/elie.jpg" alt="Elie Schoppik" />
         </div>
@@ -151,8 +151,8 @@
           <p class="testimonial__author">- Elie Schoppik</p>
         </div>
       </div>
-      <div class="testimonial__card">
-        <div class="testimonial__image fadein">
+      <div class="testimonial__card fade-in">
+        <div class="testimonial__image">
           <img src="./assets/img/tim.jpg" alt="Tim Garcia" />
         </div>
         <div>
@@ -180,104 +180,31 @@
       </form>
     </section>
 
-    <footer>
-      <ul class="footer-company">
-        <li>
-          <h4>Mountain Travel Company</h4>
-          <ul class="social-icons">
-            <li>
-              <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-instagram fa-2x"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-pinterest-square fa-2x"></i></a>
-            </li>
-          </ul>
-          <div class="contact-line">
-            <div class="contact-line-icon">
-              <i class="fa fa-phone fa-2x"></i>
-            </div>
-            <div class="contact-line-details"><p>1-555-123-4567</p></div>
-          </div>
-          <div class="contact-line">
-            <div class="contact-line-icon">
-              <i class="fa fa-envelope fa-2x"></i>
-            </div>
-            <div class="contact-line-details">
-              <p>hello@nicolasvallee.dev</p>
-            </div>
-          </div>
-          <div class="contact-line">
-            <div class="contact-line-icon">
-              <i class="fa fa-map-marker fa-2x"></i>
-            </div>
-            <div class="contact-line-details">
-              <p>
-                1042&nbsp;Jon&nbsp;Snow&nbsp;Hwy, Beaver&nbsp;Creek,
-                CO&nbsp;81620
-              </p>
-            </div>
-          </div>
-        </li>
-        <li>
-          <h4>Useful Links</h4>
-          <ul class="useful-links">
-            <li><a href="#">Recommended Gear List</a></li>
-            <li><a href="#">Frequently Asked Questions</a></li>
-            <li><a href="#">Employment</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-            <li><a href="#">Legal Notice</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-          </ul>
-        </li>
+    <footer class="site-footer">
+      <p class="site-footer__copyright">
+        &copy; 2019
+        <span>
+          Nicolas&nbsp;Vallée&nbsp;
+        </span>
+      </p>
+      <ul class="site-footer__links">
+        <li><a href="https://www.nicolasvallee.dev">see my portfolio</a></li>
+        <li><a href="https://www.linkedin.com/in/nvallee/">connect on LinkedIn</a></li>
+        <li><a href="https://github.com/nva12/mountain-travel">view source code on GitHub</a></li>
       </ul>
-      <div class="footer-dev">
-        <ul class="social-icons">
-          <li>
-            <a href="https://www.linkedin.com/in/nvallee/" target="_blank"
-              ><i class="fa fa-linkedin-square fa-2x"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://github.com/nva12/mountain-travel" target="_blank"
-              ><i class="fa fa-github-square fa-2x"></i
-            ></a>
-          </li>
-        </ul>
-        <div class="credits">
-          <p>
-            &copy; 2019
-            <span>
-              Nicolas&nbsp;Vallée&nbsp;
-            </span>
-          </p>
-          <a
-            href="https://www.nicolasvallee.dev"
-            target="_blank"
-            class="btn-portfolio"
-            >View my Portfolio</a
-          >
-          <p class="credits-course">
-            This personal project is adapted from the
-            <a
-              href="https://www.udemy.com/course/the-advanced-web-developer-bootcamp/"
-              target="_blank"
-            >
-              Advanced Web Developer Bootcamp</a
-            >
-            by&nbsp;<a
-              href="https://www.udemy.com/user/coltsteele/"
-              target="_blank"
-              >Colt&nbsp;Steele
-            </a>
-          </p>
-        </div>
-      </div>
+      <p class="site-footer__credits">
+        This personal project is adapted from a coding exercise of the
+        <a
+          href="https://www.udemy.com/course/the-advanced-web-developer-bootcamp/"
+          target="_blank"
+        >
+          Advanced Web Developer Bootcamp</a
+        >
+        by&nbsp;<a
+          href="https://www.udemy.com/user/coltsteele/"
+          target="_blank"
+          >Colt&nbsp;Steele</a>.
+      </p>
     </footer>
   </body>
 </html>
